objects/Onsite_Hardware_Request_Item__c.object
<CustomObject>
    <fields>
        <fullName>Cvent_Asset_Group__c</fullName>
        <formula>Onsite_Hardware_Request_Bundle__r.Cvent_Asset_Subgroup_Bundle__r.Cvent_Asset_Subgroup__r.Cvent_Asset_Group__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Asset Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Asset_Subgroup__c</fullName>
        <formula>Onsite_Hardware_Request_Bundle__r.Cvent_Asset_Subgroup_Bundle__r.Cvent_Asset_Subgroup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Asset Subgroup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Asset_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cvent Asset Type</label>
        <referenceTo>Cvent_Asset_Type__c</referenceTo>
        <relationshipLabel>Onsite Hardware Request Items</relationshipLabel>
        <relationshipName>Onsite_Hardware_Request_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cvent_Box__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cvent Box</label>
        <referenceTo>Cvent_Box__c</referenceTo>
        <relationshipLabel>Onsite Hardware Request Items</relationshipLabel>
        <relationshipName>Onsite_Hardware_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Actual_Return__c</fullName>
        <inlineHelpText>Auto-populated once the Asset is marked as Returned</inlineHelpText>
        <label>Date - Actual Return</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Item_Created_By__c</fullName>
        <inlineHelpText>Auto-populated. 
Used for Reporting.</inlineHelpText>
        <label>Item Created By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PM</fullName>
                    <default>true</default>
                    <label>PM</label>
                </value>
                <value>
                    <fullName>Logistics Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onsite_Hardware_Request_Bundle__c</fullName>
        <label>Onsite Hardware Request Bundle</label>
        <referenceTo>Onsite_Hardware_Request_Bundle__c</referenceTo>
        <relationshipLabel>Onsite Hardware Request Items</relationshipLabel>
        <relationshipName>Onsite_Hardware_Request_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Onsite_Hardware_Request__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Onsite Hardware Request</label>
        <referenceTo>Onsite_Hardware_Request__c</referenceTo>
        <relationshipLabel>Onsite Hardware Request Items</relationshipLabel>
        <relationshipName>Onsite_Hardware_Request_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packed__c</fullName>
        <formula>Shipped_Quantity__c / Packlist_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packed %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Packlist_Created__c</fullName>
        <formula>IF( Packlist__c &lt;&gt; null, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Packlist Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Packlist_Quantity__c</fullName>
        <inlineHelpText>Entered by the Logistics Team. Might include buffers and spares.</inlineHelpText>
        <label>Packlist Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Packlist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packlist</label>
        <referenceTo>Packlist__c</referenceTo>
        <relationshipLabel>Onsite Hardware Request Items</relationshipLabel>
        <relationshipName>Onsite_Hardware_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_to_be_Packed__c</fullName>
        <formula>if ( Packlist_Quantity__c &lt;&gt; 0, Packlist_Quantity__c , Requested_Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated. Uses the Logistics Team's entry (Packlist Quantity), if there is one. If not, defaults to the Requested Quantity entered by the PM.</inlineHelpText>
        <label>Quantity to be Packed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Quantity__c</fullName>
        <inlineHelpText>Entered by the PM. Represents the quantities agreed with the client, in the SOW or with further PCNs/COs.</inlineHelpText>
        <label>Requested Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returned_Quantity_All_Unique_Assets__c</fullName>
        <label>Returned Quantity - All Unique Assets</label>
        <summaryFilterItems>
            <field>Packlist_Item__c.Date_Actual_Return__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Packlist_Item__c.Onsite_Hardware_Request_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Returned_Quantity_Others__c</fullName>
        <inlineHelpText>Entered by the Logistics Team. 
Indicates the number of non-unique hardware returned from the event.</inlineHelpText>
        <label>Returned Quantity - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returned_Quantity__c</fullName>
        <formula>if( Returned_Quantity_All_Unique_Assets__c == 0, Returned_Quantity_Others__c, Returned_Quantity_All_Unique_Assets__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated.
Number of items being returned: unique hardware or quantity entered for non-unique hardware.</inlineHelpText>
        <label>Returned Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returned__c</fullName>
        <formula>IF (  OR(ISNULL(Shipped_Quantity__c),Shipped_Quantity__c==0) , null, Returned_Quantity__c /  Shipped_Quantity__c)</formula>
        <label>Returned %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_Correct_Unique_Assets__c</fullName>
        <inlineHelpText>Auto-calculated.
Count of all unique assets scanned to be shipped - excludes incorrectly scanned items.</inlineHelpText>
        <label>Shipped Quantity - Correct Unique Assets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_Others__c</fullName>
        <inlineHelpText>Number of items being shipped. 
Used for non-unique assets or consumables.</inlineHelpText>
        <label>Shipped Quantity - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity_Unique_Assets__c</fullName>
        <inlineHelpText>Auto-calculated.
Count of all unique assets scanned to be shipped. 
May include incorrectly scanned items.</inlineHelpText>
        <label>Shipped Quantity - All Unique Assets</label>
        <summaryForeignKey>Packlist_Item__c.Onsite_Hardware_Request_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipped_Quantity__c</fullName>
        <formula>if(  Shipped_Quantity_Correct_Unique_Assets__c == 0, Shipped_Quantity_Others__c,  Shipped_Quantity_Correct_Unique_Assets__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto-calculated.
Number of items being shipped: unique hardware or quantity entered for non-unique hardware or consumable.</inlineHelpText>
        <label>Shipped Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Onsite Hardware Request Item</label>
    <nameField>
        <displayFormat>OHRI - {0}</displayFormat>
        <label>Onsite Hardware Request Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onsite Hardware Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Packlist__c</columns>
        <columns>Packlist_Quantity__c</columns>
        <columns>Onsite_Hardware_Request_Bundle__c</columns>
        <columns>Cvent_Asset_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>